Yogesh || Fixed public survey style and broken alignement

--- a/datawinners/media-dcs/css/scss/section_subjects.scss
+++ b/datawinners/media-dcs/css/scss/section_subjects.scss
@@ -173,7 +173,7 @@
     .active {
       background-color: $table-thead-bg;
       a {
-        color: #ffffff !important;
+        color: #666666 !important;
       }
     }
   }
